k8s/coma/apps/longhorn-system/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  parentRefs:
    - name: web-gateway
      namespace: networking
      sectionName: coma-artichoke-network-https
  hostnames:
    - longhorn.coma.artichoke.network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
